# notte

./: .gitignore  meson.build
assets/: bunny.ustatic  effects.bson  material.bson  tri.bson
include/notte/: bson.h  defs.h  dict.h  error.h  fs.h  linear_allocator.h  log.h  material.h  math.h  membuf.h  memory.h  model.h  plat.h  render_graph.h  renderer.h  renderer_priv.h  string.h  thread.h  vector.h  vk_mem.h
shaders/: tri.frag  tri.vert
src/: bson.c  dict.c  error.c  fs.c  image.c  linear_allocator.c  log.c  main.c  material.c  membuf.c  memory.c  model.c  obj.c  plat_win32.c  render_graph.c  renderer.c  string.c  thread.c  vk_mem.c
